--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
         {
             "name": "learn_flutter",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "args": ["--web-port", "5000"]
         },
         {
             "name": "learn_flutter (profile mode)",
